Group Server Token Checks